--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ import SocialPill from "@/components/SocialPill.astro";
   <div class="flex gap-4 mb-4">
     <img
       class="rounded-full shadow-lg size-16"
-      src={`${import.meta.env.BASE_URL}me.png`.replace(/\/\//g, '/')}
+      src="/me.png"
       alt={personalImageAlt}
     />
     <a
