--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -24,7 +24,7 @@ const PROJECTS = [
       " ¿Necesitas organizar tus tareas? esto es lo ideal para ti",
     link: "not yet",
     github: "https://github.com/brayamchavarro/gestask",
-    image: "/public/projects/svgl.webp",
+    image: "/projects/svgl.webp",
     tags: [],
   },
   {
@@ -32,7 +32,7 @@ const PROJECTS = [
     description:
       "Plataforma de IA para la Cámara de Comercio de Bogotá, que permite a los usuarios obtener informacion sobre eventos a su interes",
     link: "not yet",
-    image: "/public/projects/adventjs.webp",
+    image: "/projects/adventjs.webp",
     tags: [],
   },
 ]
@@ -44,7 +44,7 @@ const PROJECTS = [
     <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0">
   <div class="w-full md:w-1/2">
     <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-800/50">
-      <img alt="Recién llegado vs 5 años en Nueva Zelanda" class="object-cover object-top w-full h-56 transition duration-500 sm:h-full md:scale-110 md:group-hover:scale-105" loading="lazy" src={image} />
+      <img alt={title} class="object-cover object-top w-full h-56 transition duration-500 sm:h-full md:scale-110 md:group-hover:scale-105" loading="lazy" src={image} />
     </div>
   </div>
 
@@ -72,7 +72,6 @@ const PROJECTS = [
             <LinkButton href={github}>
               <GitHub class="size-6" />
               Code
-              
             </LinkButton>
           )}
           {link && (
