fix: update project image paths and add tags

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -24,16 +24,16 @@ const PROJECTS = [
       " ¿Necesitas organizar tus tareas? esto es lo ideal para ti",
     link: "not yet",
     github: "https://github.com/brayamchavarro/gestask",
-    image: "/projects/svgl.webp",
-    tags: [],
+    image: "./projects/svgl.webp",
+    tags: [TAGS.NEXT, TAGS.TAILWIND],
   },
   {
     title: "Project-AI CCB",
     description:
       "Plataforma de IA para la Cámara de Comercio de Bogotá, que permite a los usuarios obtener informacion sobre eventos a su interes",
     link: "not yet",
-    image: "/projects/adventjs.webp",
-    tags: [],
+    image: "./projects/adventjs.webp",
+    tags: [TAGS.NEXT, TAGS.TAILWIND],
   },
 ]
 ---
