--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -24,7 +24,7 @@ const PROJECTS = [
       " ¿Necesitas organizar tus tareas? esto es lo ideal para ti",
     link: "not yet",
     github: "https://github.com/brayamchavarro/gestask",
-    image: "../../public/projects/adventjs.webp",
+    image: "./projects/adventjs.webp",
     tags: [TAGS.NEXT, TAGS.TAILWIND],
   },
   {
@@ -32,7 +32,7 @@ const PROJECTS = [
     description:
       "Plataforma de IA para la Cámara de Comercio de Bogotá, que permite a los usuarios obtener informacion sobre eventos a su interes",
     link: "not yet",
-    image: "../../public/projects/svgl.webp",
+    image: "./projects/svgl.webp",
     tags: [TAGS.NEXT, TAGS.TAILWIND],
   },
 ]
