--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -29,7 +29,7 @@ const PROJECTS = [
     link: "not yet",
     github: "https://github.com/brayamchavarro/gestask",
     image: gestaskImage.src,
-    tags: [TAGS.NEXT, TAGS.TAILWIND],
+    tags: [TAGS.NEXT],
   },
   {
     title: "Project-AI CCB",
@@ -37,7 +37,7 @@ const PROJECTS = [
       "Plataforma de IA para la Cámara de Comercio de Bogotá, que permite a los usuarios obtener informacion sobre eventos a su interes",
     link: "not yet",
     image: projectAIImage.src,
-    tags: [TAGS.NEXT, TAGS.TAILWIND],
+    tags: [TAGS.NEXT],
   },
 ]
 ---
